# homepage

./: CNAME  README.md  index.html  pyproject.toml  sample.csv
assets/css/: main.css
qtrader/: __main__.py  types.py
qtrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qtrader/broker/: paper.py
qtrader/data/: loader.py
qtrader/engine/: backtest.py
qtrader/indicators/: basic.py
qtrader/metrics/: performance.py
qtrader/risk/: manager.py
qtrader/strategy/: base.py
