[project]
name = "qtrader"
version = "0.1.0"
description = "Simple quant trading backtester with SMA strategy"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "rich>=13.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
